syntax = "proto3";

option java_package = "io.github.pavelshe11.authmicro.grpc"; // место для генерации файлов
option java_outer_classname = "AccountValidatorProto";


service AccountValidatorService {
  rpc CheckEmail (CheckEmailRequest) returns (CheckEmailResponse) {}
}

message CheckEmailRequest {
  string email = 1; // цифры - это идентификаторы для порядка полей
}

message CheckEmailResponse {
  bool exists = 1;
}